--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3T0R67TM4GuFPHGqS4bOE3u6zqzgw12cRAGRz73lwwQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=manageprofinal
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
